# Multi-Robot-UET

./: .gitignore
Nav2_astar/: CMakeLists.txt  package.xml  simple_astar_planner_plugin.xml
Nav2_astar/include/nav2_simple_astar_planner/: simple_astar_planner.hpp
Nav2_astar/src/: simple_astar_planner.cpp
imu_tools/imu_complementary_filter/config/: filter_config.yaml
imu_tools/imu_complementary_filter/src/: complementary_filter_ros.cpp
imu_tools/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
imu_tools/install/imu_complementary_filter/share/imu_complementary_filter/: local_setup.sh  package.sh
imu_tools/install/imu_complementary_filter/share/imu_complementary_filter/config/: filter_config.yaml
imu_tools/install/imu_filter_madgwick/share/imu_filter_madgwick/: local_setup.sh  package.sh
imu_tools/install/imu_tools/share/imu_tools/: local_setup.sh  package.sh
imu_tools/install/rviz_imu_plugin/share/rviz_imu_plugin/: local_setup.sh  package.sh
imu_tools/log/: latest_build
my_robot_localization/config/: ekf.yaml  mapper_params_online_sync.yaml
my_robot_localization/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_robot_localization/install/my_robot_localization/share/my_robot_localization/: package.sh
my_robot_localization/launch/: ekf.launch.py
my_robot_localization/log/: latest_build
my_robot_model/description/: camera.xacro  depth_camera.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_control.xacro  robot_core.xacro
my_robot_model/launch/: test.launch.py
my_robot_model/scripts/: wheel_odom_publisher.py
odom_encoder/odom_encoder/: fake_imu_node.py  fake_vel_node.py  odom_node.py
(+8 files in other folders)
